k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anythingintopdfbot
  labels:
    app: anythingintopdfbot
spec:
  type: ClusterIP
  selector:
    app: anythingintopdfbot
  ports:
    - name: http
      port: 80
      targetPort: http
